# bishii

./: .gitignore  .gitmodules  LICENSE
server/: CMakeLists.txt  default_conf.json
server/src/: configuration.cpp  configuration.h  jsonconfigurationparser.cpp  jsonconfigurationparser.h  main.cpp  result.h
server/src/models/: game.cpp  game.h  system.cpp  system.h
